lab1/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error
    8       | Specifier error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | ID LP error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | IF LP Exp RP error ELSE Stmt
   37     | WHILE error RP Stmt
   38     | Exp error
   39     | RETURN Exp error

   40 DefList: Def DefList
   41        | %empty
   42        | error SEMI

   43 Def: Specifier DecList SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP RP
   61    | Exp LB Exp RB
   62    | Exp DOT ID
   63    | ID
   64    | INT
   65    | FLOAT
   66    | Exp LB error RB
   67    | ID LP error RP

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 20 23 36 37 38 39 42 66 67
SEMI (258) 4 5 8 30 32 42 43
COMMA (259) 10 24 45 68
ASSIGNOP (260) 47 48
PLUS (261) 52
MINUS (262) 53 57
STAR (263) 54
DIV (264) 55
AND (265) 49
OR (266) 50
NOT (267) 58
DOT (268) 62
TYPE (269) 11
LP (270) 21 22 23 33 34 35 36 56 59 60 67
RP (271) 21 22 23 33 34 35 36 37 56 59 60 67
LB (272) 19 61 66
RB (273) 19 20 61 66
LC (274) 13 27
RC (275) 13 27
STRUCT (276) 13 14
RETURN (277) 32 39
IF (278) 33 34 36
ELSE (279) 34 36
WHILE (280) 35 37
INT (281) 19 64
FLOAT (282) 65
ID (283) 15 17 18 21 22 23 59 60 62 63 67
RELOP (284) 51
SUB (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (36)
    on left: 9 10, on right: 4 10
Specifier (37)
    on left: 11 12, on right: 4 5 6 7 8 26 43
StructSpecifier (38)
    on left: 13 14, on right: 12
OptTag (39)
    on left: 15 16, on right: 13
Tag (40)
    on left: 17, on right: 14
VarDec (41)
    on left: 18 19 20, on right: 9 10 19 20 26 46 47
FunDec (42)
    on left: 21 22 23, on right: 6
VarList (43)
    on left: 24 25, on right: 21 24
ParamDec (44)
    on left: 26, on right: 24 25
CompSt (45)
    on left: 27, on right: 6 31
StmtList (46)
    on left: 28 29, on right: 27 28
Stmt (47)
    on left: 30 31 32 33 34 35 36 37 38 39, on right: 28 33 34 35 36
    37
DefList (48)
    on left: 40 41 42, on right: 13 27 40
Def (49)
    on left: 43, on right: 40
DecList (50)
    on left: 44 45, on right: 43 45
Dec (51)
    on left: 46 47, on right: 44 45
Exp (52)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67, on right: 30 32 33 34 35 36 38 39 47 48 49 50 51 52 53 54
    55 56 57 58 61 62 66 68 69
Args (53)
    on left: 68 69, on right: 59 68


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error
    8       | Specifier . error SEMI

    error  shift, and go to state 13
    SEMI   shift, and go to state 14
    ID     shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 9

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    7 ExtDef: Specifier error .
    8       | Specifier error . SEMI

    SEMI  shift, and go to state 20

    $default  reduce using rule 7 (ExtDef)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP
   23       | ID . LP error RP

    LP  shift, and go to state 21

    $default  reduce using rule 18 (VarDec)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 17

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . error RB

    error  shift, and go to state 23
    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    SEMI  reduce using rule 9 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


State 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 41 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 30
    Def              go to state 31


State 20

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 21

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP
   23       | ID LP . error RP

    error   shift, and go to state 32
    TYPE    shift, and go to state 1
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 2

    Specifier        go to state 34
    StructSpecifier  go to state 7
    VarList          go to state 35
    ParamDec         go to state 36


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

   20 VarDec: VarDec error . RB

    RB  shift, and go to state 37


State 24

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 17


State 25

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


State 26

   27 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)
    INT     reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 31


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   42 DefList: error . SEMI

    SEMI  shift, and go to state 42


State 29

   43 Def: Specifier . DecList SEMI

    ID  shift, and go to state 38

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 30

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


State 31

   40 DefList: Def . DefList

    error   shift, and go to state 28
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)
    INT     reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 47
    Def              go to state 31


State 32

   23 FunDec: ID LP error . RP

    RP  shift, and go to state 48


State 33

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 34

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 49


State 35

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


State 36

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 25 (VarList)


State 37

   20 VarDec: VarDec error RB .

    $default  reduce using rule 20 (VarDec)


State 38

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 39

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 40

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


State 41

   27 CompSt: LC DefList . StmtList RC

    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 26
    RETURN  shift, and go to state 56
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


State 42

   42 DefList: error SEMI .

    $default  reduce using rule 42 (DefList)


State 43

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . error RB
   46 Dec: VarDec .
   47    | VarDec . ASSIGNOP Exp

    error     shift, and go to state 23
    ASSIGNOP  shift, and go to state 66
    LB        shift, and go to state 25

    SEMI   reduce using rule 46 (Dec)
    COMMA  reduce using rule 46 (Dec)


State 44

   43 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 67


State 45

   44 DecList: Dec .
   45        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 44 (DecList)


State 46

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 47

   40 DefList: Def DefList .

    $default  reduce using rule 40 (DefList)


State 48

   23 FunDec: ID LP error RP .

    $default  reduce using rule 23 (FunDec)


State 49

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . error RB
   26 ParamDec: Specifier VarDec .

    error  shift, and go to state 23
    LB     shift, and go to state 25

    COMMA  reduce using rule 26 (ParamDec)
    RP     reduce using rule 26 (ParamDec)


State 50

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 51

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 34
    StructSpecifier  go to state 7
    VarList          go to state 69
    ParamDec         go to state 36


State 52

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 53

   57 Exp: MINUS . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 70


State 54

   58 Exp: NOT . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 71


State 55

   56 Exp: LP . Exp RP

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 72


State 56

   32 Stmt: RETURN . Exp SEMI
   39     | RETURN . Exp error

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 73


State 57

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt
   36     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 74


State 58

   35 Stmt: WHILE . LP Exp RP Stmt
   37     | WHILE . error RP Stmt

    error  shift, and go to state 75
    LP     shift, and go to state 76


State 59

   64 Exp: INT .

    $default  reduce using rule 64 (Exp)


State 60

   65 Exp: FLOAT .

    $default  reduce using rule 65 (Exp)


State 61

   59 Exp: ID . LP Args RP
   60    | ID . LP RP
   63    | ID .
   67    | ID . LP error RP

    LP  shift, and go to state 77

    $default  reduce using rule 63 (Exp)


State 62

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 63

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 78


State 64

   28 StmtList: Stmt . StmtList

    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 26
    RETURN  shift, and go to state 56
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 79
    Stmt      go to state 64
    Exp       go to state 65


State 65

   30 Stmt: Exp . SEMI
   38     | Exp . error
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB

    error     shift, and go to state 80
    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90
    RELOP     shift, and go to state 91


State 66

   47 Dec: VarDec ASSIGNOP . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 92


State 67

   43 Def: Specifier DecList SEMI .

    $default  reduce using rule 43 (Def)


State 68

   45 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 43
    DecList  go to state 93
    Dec      go to state 45


State 69

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 70

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   57    | MINUS Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB

    DOT  shift, and go to state 89
    LB   shift, and go to state 90

    $default  reduce using rule 57 (Exp)


State 71

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   58    | NOT Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB

    MINUS  shift, and go to state 84
    DOT    shift, and go to state 89
    LB     shift, and go to state 90

    $default  reduce using rule 58 (Exp)


State 72

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   56    | LP Exp . RP
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    RP        shift, and go to state 94
    LB        shift, and go to state 90
    RELOP     shift, and go to state 91


State 73

   32 Stmt: RETURN Exp . SEMI
   39     | RETURN Exp . error
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB

    error     shift, and go to state 95
    SEMI      shift, and go to state 96
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90
    RELOP     shift, and go to state 91


State 74

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt
   36     | IF LP . Exp RP error ELSE Stmt

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 97


State 75

   37 Stmt: WHILE error . RP Stmt

    RP  shift, and go to state 98


State 76

   35 Stmt: WHILE LP . Exp RP Stmt

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 99


State 77

   59 Exp: ID LP . Args RP
   60    | ID LP . RP
   67    | ID LP . error RP

    error  shift, and go to state 100
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    RP     shift, and go to state 101
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp   go to state 102
    Args  go to state 103


State 78

   27 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 27 (CompSt)


State 79

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


State 80

   38 Stmt: Exp error .

    $default  reduce using rule 38 (Stmt)


State 81

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 82

   48 Exp: Exp ASSIGNOP . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 104


State 83

   52 Exp: Exp PLUS . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 105


State 84

   53 Exp: Exp MINUS . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 106


State 85

   54 Exp: Exp STAR . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 107


State 86

   55 Exp: Exp DIV . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 108


State 87

   49 Exp: Exp AND . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 109


State 88

   50 Exp: Exp OR . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 110


State 89

   62 Exp: Exp DOT . ID

    ID  shift, and go to state 111


State 90

   61 Exp: Exp LB . Exp RB
   66    | Exp LB . error RB

    error  shift, and go to state 112
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 113


State 91

   51 Exp: Exp RELOP . Exp

    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 114


State 92

   47 Dec: VarDec ASSIGNOP Exp .
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90
    RELOP     shift, and go to state 91

    $default  reduce using rule 47 (Dec)


State 93

   45 DecList: Dec COMMA DecList .

    $default  reduce using rule 45 (DecList)


State 94

   56 Exp: LP Exp RP .

    $default  reduce using rule 56 (Exp)


State 95

   39 Stmt: RETURN Exp error .

    $default  reduce using rule 39 (Stmt)


State 96

   32 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 97

   33 Stmt: IF LP Exp . RP Stmt
   34     | IF LP Exp . RP Stmt ELSE Stmt
   36     | IF LP Exp . RP error ELSE Stmt
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    RP        shift, and go to state 115
    LB        shift, and go to state 90
    RELOP     shift, and go to state 91


State 98

   37 Stmt: WHILE error RP . Stmt

    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 26
    RETURN  shift, and go to state 56
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61

    CompSt  go to state 62
    Stmt    go to state 116
    Exp     go to state 65


State 99

   35 Stmt: WHILE LP Exp . RP Stmt
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    RP        shift, and go to state 117
    LB        shift, and go to state 90
    RELOP     shift, and go to state 91


State 100

   67 Exp: ID LP error . RP

    RP  shift, and go to state 118


State 101

   60 Exp: ID LP RP .

    $default  reduce using rule 60 (Exp)


State 102

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB
   68 Args: Exp . COMMA Args
   69     | Exp .

    COMMA     shift, and go to state 119
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90
    RELOP     shift, and go to state 91

    $default  reduce using rule 69 (Args)


State 103

   59 Exp: ID LP Args . RP

    RP  shift, and go to state 120


State 104

   48 Exp: Exp . ASSIGNOP Exp
   48    | Exp ASSIGNOP Exp .
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90
    RELOP     shift, and go to state 91

    $default  reduce using rule 48 (Exp)


State 105

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   52    | Exp PLUS Exp .
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB

    MINUS  shift, and go to state 84
    STAR   shift, and go to state 85
    DIV    shift, and go to state 86
    DOT    shift, and go to state 89
    LB     shift, and go to state 90

    $default  reduce using rule 52 (Exp)


State 106

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   53    | Exp MINUS Exp .
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB

    MINUS  shift, and go to state 84
    STAR   shift, and go to state 85
    DIV    shift, and go to state 86
    DOT    shift, and go to state 89
    LB     shift, and go to state 90

    $default  reduce using rule 53 (Exp)


State 107

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   54    | Exp STAR Exp .
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB

    MINUS  shift, and go to state 84
    DOT    shift, and go to state 89
    LB     shift, and go to state 90

    $default  reduce using rule 54 (Exp)


State 108

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   55    | Exp DIV Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66    | Exp . LB error RB
